# pycpp

./: .gitignore  README.md  requirements.txt
exCPP/: inferface.pyx  setup.py
exCPP/cpp/: Circle.cpp  Rectangle.cpp
exCPP/cython/: Circle.cpp  Circle.pyx  Rectangle.cpp  Rectangle.pyx  rectInterface.cpp  rectInterface.pyx
exCPP/include/: Circle.hpp  Rectangle.hpp
exCPP/test/: test.py
exFib/: main.py  setup.py
exIntegrate/: integrate.c  integrate.html  integrate.pyx  main.py  setup.py
exPI/: CMakeLists.txt  setup.py
exPI/include/: pi_calculator.h
exPI/src/: CMakeLists.txt  pi_calculator.c  pi_calculator.h  pyInterface.pyx
exPrime/: main.py  prime.cpp  prime.pyx  prime_compiled.py  setup.py
